--- a/src/pages/cennik.astro
+++ b/src/pages/cennik.astro
@@ -15,7 +15,11 @@ const cms = await response.json();
 const cennik = cms.cennik;
 ---
 
-<Layout title="Cennik usług IT | Darnet24" description={cennik.description}>
+<Layout
+  title="Cennik usług IT | Darnet24"
+  description={cennik.description}
+  keywords="cennik usług IT Warszawa, ceny serwis komputerowy, outsourcing IT koszty"
+>
 
   <!-- CTA do obsługi firm -->
   <section class="py-6 bg-yellow-400 text-black text-center">
