--- a/src/pages/uslugi/programy-ksiegowe.astro
+++ b/src/pages/uslugi/programy-ksiegowe.astro
@@ -2,7 +2,11 @@
 import Layout from "../../layouts/Layout.astro";
 ---
 
-<Layout title="Programy księgowe – instalacja, migracje, serwis | Silent IT">
+<Layout
+  title="Programy księgowe – instalacja, migracje, serwis | Silent IT"
+  description="Instalacja, aktualizacja i serwis programów księgowych: RAKS, WAPRO, Comarch, Insert, Symfonia, Płatnik"
+  keywords="programy księgowe, instalacja programów księgowych, serwis RAKS, WAPRO, Comarch, Insert, Symfonia, Płatnik"
+>
 
   <section class="py-20 bg-gray-900 text-white">
     <div class="max-w-6xl mx-auto px-6 text-center">
