--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Strona nie znaleziona" description="404 - Strona nie istnieje">
+<Layout
+  title="Strona nie znaleziona"
+  description="404 - Strona nie istnieje"
+  keywords="404, strona nie istnieje"
+>
   <!-- HERO 404 -->
   <section class="text-center py-32 px-6 bg-gray-800 text-white">
     <h1 class="text-7xl font-extrabold mb-6 text-yellow-400">404</h1>
