--- a/src/pages/pomoc-zdalna.astro
+++ b/src/pages/pomoc-zdalna.astro
@@ -1,7 +1,5 @@
 ---
 import Layout     from '../layouts/Layout.astro';
-import Navbar     from '../components/Navbar.astro';
-import Footer     from '../components/Footer.astro';
 import ModalForm  from '../components/ModalForm.astro';
 
 const BACKEND_URL =
@@ -29,8 +27,11 @@ const {
 } = pomoc;
 ---
 
-<Layout title={title} description={description}>
-  <Navbar slot="navbar" />
+<Layout
+  title={title}
+  description={description}
+  keywords="pomoc zdalna IT Warszawa, zdalne wsparcie komputerowe, serwis komputerowy online"
+>
 
   <section class="text-center py-20 px-6 bg-gray-100 dark:bg-gray-800">
     <h1 class="text-4xl font-bold mb-4">{heading}</h1>
@@ -132,7 +133,6 @@ const {
     </div>
   </div>
 
-  <Footer slot="footer" />
 
   <!-- JS – modal + komunikaty -->
   <script is:inline>
